fixed date time issue and added helpline page and also translate education dashboard page

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -1,4 +1,7 @@
 {
+    "message_on_map": "Welcome To UDISE+\nDashboard",
+    "helpline_numbers": "Helpline Numbers",
+    "skip_to_navigation": "Skip To Navigation",
     "home": "Home",
     "about_pgi": "ABOUT PGI-D",
     "state_index": "STATES INDEX",
@@ -6,6 +9,7 @@
     "categories": "CATEGORIES",
     "indicators": "INDICATORS",
     "skip_to_main_content": "Skip to Main Content",
+    "language": "Language",
     "last_modified": "Last Modified",
     "screen_reader_access": "Screen Reader Access",
     "logout": "Logout",
@@ -13,5 +17,46 @@
     "school_dashboard": "School Dashboard",
     "teacher_dashboard": "Teacher Dashboard",
     "student_dashboard": "Student Dashboard",
-    "all_reports": "All Reports"
+    "all_reports": "All Reports",
+    "close_map_button": "Close Map",
+    "open_map_button": "Open Map",
+    "udise_reports": "UDISE+ Reports",
+    "no_of_schools": "No. Of Schools",
+    "no_of_teachers": "No. Of Teachers",
+    "no_of_students": "No. Of Students",
+    "urban": "Urban",
+    "rural": "Rural",
+    "impact_of_various_schemes_and_initiatives":"Impact of Various Schemes and Initiatives",
+    "gross_enrollment_ratio":"Gross Enrollment\nRatio",
+    "dropout_rate":"Dropout\nRate",
+    "transition_rate":"Transition\nRate",
+    "elementary":"Elementary",
+    "secondary": "Secondary",
+    "primary": "Primary",
+    "pupil_teacher_ratio":"Pupil-Teacher\nRatio",
+    "primary_to_upper_primary": "Primary to upper primary",
+    "upper_primary_to_secondary": "Upper primary to upper primary",
+    "upper_primary": "Upper primary",
+    "schools_with_drinking_water": "Schools with Drinking\nWater",
+    "schools_with_electricity_connection": "Schools with Electricity\nConnection",
+    "education_data_by_management_type":"Education Data By Management Type",
+    "enrollment_by_level_of_education_gender": "Enrollment By Level Of Education &\nGender",
+    "status_of_infrastructure_in_schools": "Status of Infrastructure in Schools\n(Management Wise)",
+    "teacher": "Teacher",
+    "school": "School",
+    "student": "Student",
+    "girl_toilet": "Girl Toilet",
+    "library_with_books": "Library With Books",
+    "electricity": "Electricity",
+    "drinking_water": "Drinking Water",
+    "handwash": "Handwash",
+    "medical_facility": "Medical Facility",
+    "helpline_page_description": "If you need assistance or have any inquiries, please feel free to contact our helpline numbers below:",
+    "number_of_schools_management_wise": "Number of School Management-Wise",
+    "total_schools": "Total Schools",
+    "secondary_schools": "Secondary Schools",
+    "higher_sec_school": "Higher Sec. School",
+    "elementary_schools": "Elementary School",
+    "number_of_schools_by_level_of_education": "Number of School by Level of education",
+    "number_of_schools_based_on_school_types": "स्कूल के प्रकार के आधार पर स्कूलों की\nसंख्या"
 }
