--- a/src/assets/locales/hi/translation.json
+++ b/src/assets/locales/hi/translation.json
@@ -1,4 +1,7 @@
 {
+    "message_on_map": "UDISE+ डैशबोर्ड में आपका\nस्वागत है",
+    "helpline_numbers": "हेल्पलाइन नंबर",
+    "skip_to_navigation": "नेविगेशन पर जाएं",
     "home": "घर",
     "about_pgi": "पीजीआई के बारे में",
     "state_index": "राज्य सूचकांक",
@@ -6,6 +9,7 @@
     "categories": "श्रेणियाँ",
     "indicators": "संकेतक",
     "skip_to_main_content": "मुख्य विषय में जाएं",
+    "language": "भाषा",
     "last_modified": "अंतिम संशोधित",
     "screen_reader_access": "स्क्रीन रीडर एक्सेस",
     "logout": "लॉगआउट",
@@ -13,5 +17,47 @@
     "school_dashboard": "स्कूल डैशबोर्ड",
     "teacher_dashboard": "शिक्षक डैशबोर्ड",
     "student_dashboard": "छात्र डैशबोर्ड",
-    "all_reports": "सभी रिपोर्ट"
+    "all_reports": "सभी रिपोर्ट",
+    "close_map_button": "बंद करना",
+    "open_map_button": "खोलें",
+    "udise_reports": "UDISE+ रिपोर्ट",
+    "no_of_schools": "स्कूल की संख्या",
+    "no_of_teachers": "शिक्षकों की संख्या",
+    "no_of_students": "छात्रों की संख्या",
+    "urban": "शहरी",
+    "rural": "ग्रामीण",
+    "impact_of_various_schemes_and_initiatives":"विभिन्न योजनाओं और पहलों का प्रभाव",
+    "gross_enrollment_ratio":"सकल नामांकन\nअनुपात",
+    "dropout_rate":"छोड़ने की\nदर",
+    "transition_rate":"संक्रमण\nदर",
+    "elementary":"प्राथमिक",
+    "secondary": "माध्यमिक",
+    "primary": "प्राथमिक",
+    "pupil_teacher_ratio":"विद्यार्थी-शिक्षक\nअनुपात",
+    "primary_to_upper_primary": "प्राथमिक से उच्च प्राथमिक",
+    "upper_primary_to_secondary": "उच्च प्राथमिक से माध्यमिक",
+    "upper_primary": "उच्च प्राथमिक",
+    "schools_with_drinking_water": "पीने के पानी वाले\nस्कूल",
+    "schools_with_electricity_connection": "बिजली कनेक्शन वाले\nस्कूल",
+    "education_data_by_management_type":"प्रबंधन प्रकार के अनुसार शिक्षा डेटा",
+    "enrollment_by_level_of_education_gender": "शिक्षा के स्तर और लिंग के आधार पर\nनामांकन",
+    "status_of_infrastructure_in_schools": "स्कूलों में बुनियादी ढांचे की स्थिति\n(प्रबंधन के अनुसार)",
+    "teacher": "अध्यापक",
+    "school": "विद्यालय",
+    "student": "विद्यार्थी",
+    "girl_toilet": "लड़की शौचालय",
+    "library": "पुस्तकालय",
+    "library_with_books": "पुस्तकों के साथ पुस्तकालय",
+    "electricity": "बिजली",
+    "drinking_water": "पेय जल",
+    "handwash": "हाथ धोना",
+    "medical_facility": "स्वास्थ्य सुविधा",
+    "helpline_page_description": "यदि आपको सहायता की आवश्यकता है या कोई पूछताछ है, तो कृपया बेझिझक नीचे दिए गए हमारे हेल्पलाइन नंबरों पर संपर्क करें:",
+    "number_of_schools_management_wise": "प्रबंधन-वार स्कूलों की संख्या",
+    "total_schools": "कुल विद्यालय",
+    "secondary_schools": "माध्यमिक विद्यालय",
+    "higher_sec_school": "हायर सेक. विद्यालय",
+    "elementary_schools": "प्राथमिक विद्यालय",
+    "number_of_schools_by_level_of_education": "शिक्षा के स्तर के अनुसार स्कूलों की संख्या",
+    "number_of_schools_based_on_school_types": "स्कूल के प्रकार के आधार पर स्कूलों की\nसंख्या"
 }
