fixed en translation issue

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -58,5 +58,5 @@
     "higher_sec_school": "Higher Sec. School",
     "elementary_schools": "Elementary School",
     "number_of_schools_by_level_of_education": "Number of School by Level of education",
-    "number_of_schools_based_on_school_types": "स्कूल के प्रकार के आधार पर स्कूलों की\nसंख्या"
+    "number_of_schools_based_on_school_types": "Number of School based on School types"
 }
