--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -5,7 +5,7 @@
     "home": "Home",
     "about_pgi": "ABOUT PGI-D",
     "state_index": "STATES INDEX",
-    "reports": "REPORTS",
+    "reports": "Reports",
     "categories": "CATEGORIES",
     "indicators": "INDICATORS",
     "skip_to_main_content": "Skip to Main Content",
@@ -32,6 +32,7 @@
     "transition_rate":"Transition\nRate",
     "elementary":"Elementary",
     "secondary": "Secondary",
+    "higher_secondary": "Higher Secondary",
     "primary": "Primary",
     "pupil_teacher_ratio":"Pupil-Teacher\nRatio",
     "primary_to_upper_primary": "Primary to upper primary",
@@ -58,5 +59,32 @@
     "higher_sec_school": "Higher Sec. School",
     "elementary_schools": "Elementary School",
     "number_of_schools_by_level_of_education": "Number of School by Level of education",
-    "number_of_schools_based_on_school_types": "Number of School based on School types"
+    "number_of_schools_based_on_school_types": "Number of School based on School types",
+    "number_of_schools_by_type_and_school_category": "Number of Schools by Type and\nSchool Category",
+    "total_teachers": "Total Teachers",
+    "elementary_teachers": "Elementary Teachers",
+    "secondary_teachers": "Secondary Teachers",
+    "higher_sec_teachers": "Higher Sec. Teachers",
+    "number_of_teachers_management_wise": "Number of Teachers Management-Wise",
+    "number_of_teachers_by_level_of_education": "Number of Teachers by Level of Education",
+    "number_of_male_female_teacher": "Number of Male - Female Teacher",
+    "total_students": "Total Students",
+    "elementary_students": "Elementary Students",
+    "secondary_students": "Secondary Students",
+    "higher_secondary_students": "Higher Sec. Students",
+    "number_of_students_management_wise": "Number of Students Management-Wise",
+    "gross_enrolment_ratio": "Gross Enrolment Ratio",
+    "net_enrolment_ratio": "Net Enrolment Ratio",
+    "number_boys_and_girls": "Number Boys and Girls",
+    "all_reports_page": {
+        "reports": "Reports",
+        "search_for_reports": "Search For Reports",
+        "download_udise_yearly_report": "Download UDISE\nYearly Report",
+        "frequently_used_reports": "Frequently Used Reports"
+    },
+    "screen_reader": {
+        "title": "Screen Reader Access",
+        "description": "The Director General of Quality Assurance website complies with Guidelines for Indian Government Websites and World Wide Web Consortium (W3C) Web Content Accessibility Guidelines (WCAG) 2.0 level A. This will enable people with visual impairments access the website using technologies, such as screen readers. The information of the website is accessible with different screen readers, such as JAWS, NVDA, SAFA, Supernova and Window-Eyes.",
+        "table_description": "Following table lists the information about different screen readers : Information related to the various screen readers"
+    }
 }
