--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -84,7 +84,7 @@
     },
     "screen_reader": {
         "title": "Screen Reader Access",
-        "description": "The Director General of Quality Assurance website complies with Guidelines for Indian Government Websites and World Wide Web Consortium (W3C) Web Content Accessibility Guidelines (WCAG) 2.0 level A. This will enable people with visual impairments access the website using technologies, such as screen readers. The information of the website is accessible with different screen readers, such as JAWS, NVDA, SAFA, Supernova and Window-Eyes.",
+        "description": "The UDISE of Quality Assurance website complies with Guidelines for Indian Government Websites and World Wide Web Consortium (W3C) Web Content Accessibility Guidelines (WCAG) 2.0 level A. This will enable people with visual impairments access the website using technologies, such as screen readers. The information of the website is accessible with different screen readers, such as JAWS, NVDA, SAFA, Supernova and Window-Eyes.",
         "table_description": "Following table lists the information about different screen readers : Information related to the various screen readers"
     }
 }
