Add table scroll and add breadcrumb

--- a/src/assets/locales/hi/translation.json
+++ b/src/assets/locales/hi/translation.json
@@ -85,7 +85,7 @@
     },
     "screen_reader": {
         "title": "स्क्रीन रीडर एक्सेस",
-        "description": "क्वालिटी एश्योरेंस महानिदेशक की वेबसाइट भारत सरकार की वेबसाइटों और वर्ल्ड वाइड वेब कंसोर्टियम (डब्ल्यू3सी) वेब कंटेंट एक्सेसिबिलिटी दिशानिर्देश (डब्ल्यूसीएजी) 2.0 स्तर ए के दिशानिर्देशों का अनुपालन करती है। यह दृष्टिबाधित लोगों को स्क्रीन रीडर जैसी प्रौद्योगिकियों का उपयोग करके वेबसाइट तक पहुंचने में सक्षम बनाएगी। . वेबसाइट की जानकारी विभिन्न स्क्रीन रीडर्स, जैसे कि JAWS, NVDA, SAFA, सुपरनोवा और विंडो-आइज़ के साथ उपलब्ध है।",
+        "description": "UDISE+ डैशबोर्ड भारत सरकार की वेबसाइटों और वर्ल्ड वाइड वेब कंसोर्टियम (W3C) वेब कंटेंट एक्सेसिबिलिटी दिशानिर्देश (WCAG) 2.0 स्तर A के लिए दिशानिर्देशों का अनुपालन करता है। यह दृष्टिबाधित लोगों को स्क्रीन रीडर जैसी प्रौद्योगिकियों का उपयोग करके वेबसाइट तक पहुंचने में सक्षम करेगा। वेबसाइट की जानकारी विभिन्न स्क्रीन रीडर्स, जैसे कि JAWS, NVDA, SAFA, सुपरनोवा और विंडो-आइज़ के साथ उपलब्ध है।",
         "table_description": "निम्नलिखित तालिका विभिन्न स्क्रीन रीडर के बारे में जानकारी सूचीबद्ध करती है: विभिन्न स्क्रीन रीडर से संबंधित जानकारी"
     }
 }
